add_subdirectory(googletest)
add_subdirectory(unit)
add_subdirectory(func)
#add_subdirectory(GtestExample)
#add_subdirectory(library)
#add_subdirectory(MMLidarTest)
#add_subdirectory(MMDetectorTest)
#add_subdirectory(MMDeviceTest)
#add_subdirectory(MMPostFusionTest)
## add_subdirectory(GtestSample)
#add_subdirectory(MMWebServer)
#add_subdirectory(MMSocketTest)
#add_subdirectory(LoamDetectorTest)
#add_subdirectory(LegoDetectorTest)
#add_subdirectory(MMTYAETest)
#add_subdirectory(ObstacleTest)
