#include(GNUInstallDirs)
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/${CMAKE_INSTALL_LIBDIR})
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/${CMAKE_INSTALL_LIBDIR})
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
# Not available, can't move binary to tools dir due to relative path
# set(EXECUTABLE_OUTPUT_PATH ${OUTDIR}/install/bin/tools)
add_definitions(-DTOOL_PATH="${PROJECT_SOURCE_DIR}/tool/")

add_subdirectory(remoteConfigService)
add_subdirectory(autaneService)
add_subdirectory(spreaderDetector)
add_subdirectory(LCPS)
add_subdirectory(PublishObs)
add_subdirectory(autoBuildRules)
add_subdirectory(CPS)

# Calibrate
add_subdirectory(caliToUniform)
add_subdirectory(getPointTrans)
add_subdirectory(mergeCloud)
add_subdirectory(hesaiCali)
add_subdirectory(manualCali)
add_subdirectory(publish)
add_subdirectory(roiCloud)
add_subdirectory(simpleMergeCloud)
add_subdirectory(checkLidar)
add_subdirectory(laneDetectorCalibrate)
add_subdirectory(cameraIntrinsicCalibrate)
add_subdirectory(bayPositionCalibrate)
add_subdirectory(gantryVisionCollCalibrate)
add_subdirectory(rotateTrans)
add_subdirectory(gantryLidarCalib)
add_subdirectory(generateTestData)
add_subdirectory(showClouds)
add_subdirectory(truckSideTool)

#add_subdirectory(Calibrate/CameraCaliTool)
#add_subdirectory(Calibrate/LidarCaliGantryGround)
#add_subdirectory(CaptureTool)
#add_subdirectory(ParsePlane)
#add_subdirectory(LocatePoint)
#add_subdirectory(PLCTool)
#add_subdirectory(S1500)
#add_subdirectory(ImageTool)
#add_subdirectory(PoseFromVP)
#add_subdirectory(Optimizer)
#add_subdirectory(LidarICP)
#add_subdirectory(LidarParsePlane)
#add_subdirectory(LaneDetector)
#add_subdirectory(KFilter)
#add_subdirectory(FeatureTracker)
#add_subdirectory(HandCalibration)
#add_subdirectory(LidarDebugTool)
#add_subdirectory(CameraDebugTool)
#add_subdirectory(WebInterface)
#add_subdirectory(PoseConfirmTool)
#add_subdirectory(LidarCalibrateRecord)
#add_subdirectory(LidarCalibrateCalculate)
#add_subdirectory(Calibrate/LidarCalibrTool)
#add_subdirectory(LidarIntensityViewer)
#add_subdirectory(CamLandMarkerDetectorTool)
#add_subdirectory(LiDAR/PointLaneDetector)
#add_subdirectory(LiDAR/PCDFileBrowser)
##add_subdirectory(SLAM/Cartographer)
#add_subdirectory(gnss)
#add_subdirectory(WGS84)
#add_subdirectory(CalculateTools/CalculateRow)
#add_subdirectory(Calibrate/GantryCollCalibrate)
#add_subdirectory(SwitchTool)
add_subdirectory(licTool)
#add_subdirectory(InstallationVerification)
#add_subdirectory(CalibDataCapture)
#add_subdirectory(OpenCoreDump)
#if (BUILD_ESTIMATOR_TOOL)
#    add_subdirectory(EstimatorTool)
#endif ()
add_subdirectory(NLOS)
add_subdirectory(COD_LCPS)
add_subdirectory(LLEC)
add_subdirectory(SCHD)
